<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".admin.AdminPageActivity">

    <!-- 氏名 -->
    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_title_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/text_title_name"
            android:textColor="#000000"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/text_Kome_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <!-- ellipsize：文字が行に収まりきらない末尾を「...」表示 -->
        <!-- inputType：表示するキーボードを文字に指定 -->
        <EditText
            android:id="@+id/edit_text_hint_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/text_hint_text"
            android:inputType="text"
            android:lines="1"
            android:maxLength="12"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="10sp" />
    </LinearLayout>

    <!-- Email -->
    <LinearLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_title_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/text_title_email"
            android:textColor="#000000"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/text_Kome_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_text_hint_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/text_hint_email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="10sp" />
    </LinearLayout>

    <!-- Password -->
    <LinearLayout
        android:id="@+id/layout_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_title_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/text_title_password"
            android:textColor="#000000"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/text_Kome_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_text_hint_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:ems="10"
            android:hint="@string/text_hint_number"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="8"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="10sp" />
    </LinearLayout>

    <!-- 登録ボタン -->

    <!-- 選択用ラジオボタン -->
    <Button
        android:id="@+id/button_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_Password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/button_regist"
        android:textSize="15sp"
        app:backgroundTint="#D6CF6B" />

    <RadioGroup
        android:id="@+id/radioGroup01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/button_regist"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_alignParentLeft="false"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/button_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:checked="true"
            android:layout_marginTop="8dp"
            android:text="@string/button_name"
            android:textColor="#000000"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/button_regist_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/button_regist_list"
            android:textColor="#000000"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/button_search_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/button_search_table"
            android:textColor="#000000"
            android:textSize="10sp" />
    </RadioGroup>

    <!-- 表示ボタン -->
    <Button
        android:id="@+id/button_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup01"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/button_show"
        android:textSize="15sp"
        app:backgroundTint="#D6CF6B" />

</RelativeLayout>