<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".purchaseList.TopActivity">

    <!-- 品名 -->

    <LinearLayout
        android:id="@+id/layout_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_title_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="fill_horizontal"
            android:text="@string/text_title_product_name"
            android:textColor="#000000"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/text_Kome_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <!-- ellipsize：文字が行に収まりきらない末尾を「...」表示 -->
        <!-- inputType：表示するキーボードを文字に指定 -->
        <EditText
            android:id="@+id/edit_text_hint_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/text_hint_text"
            android:inputType="text"
            android:lines="1"
            android:maxLength="12"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layout_product_name">

        <TextView
            android:id="@+id/text_annotation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.1"
            android:text="@string/text_annotation"
            android:textSize="10sp" />
    </LinearLayout>


    <RadioGroup
        android:id="@+id/radio_group_brand_madein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/layout_text_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_alignParentLeft="false"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/button_brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/button_brand_name"
            android:textColor="#000000"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/button_madein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/button_madein"
            android:textColor="#000000"
            android:textSize="10sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_brand"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group_brand_madein"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/text_Kome_brand_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_text_hint_brand_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/text_hint_brand"
            android:inputType="text"
            android:lines="1"
            android:maxLength="12"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_madein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_brand"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/text_Kome_madein"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_text_hint_madein"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/text_hint_madein"
            android:inputType="text"
            android:lines="1"
            android:maxLength="12"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="10sp" />
    </LinearLayout>

    <!-- 個数 -->
    <LinearLayout
        android:id="@+id/layout_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_madein"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_title_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="fill_horizontal"
            android:text="@string/text_title_quantity"
            android:textColor="#000000"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/text_Kome_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <!-- inputType：表示するキーボードを数値に指定 -->
        <EditText
            android:id="@+id/edit_text_hint_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/text_hint_number"
            android:inputType="number"
            android:lines="1"
            android:maxLength="24"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="10sp" />
    </LinearLayout>

    <!-- 値段 -->
    <LinearLayout
        android:id="@+id/layout_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_number"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_title_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center|fill_horizontal"
            android:text="@string/text_title_price"
            android:textColor="#000000"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/text_Kome_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_text_hint_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/text_hint_number"
            android:inputType="number"
            android:lines="1"
            android:maxLength="24"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="10sp" />
    </LinearLayout>

    <!-- 登録ボタン -->

    <!-- 選択用ラジオボタン -->

    <Button
        android:id="@+id/button_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_price"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/button_regist"
        android:textSize="15sp"
        app:backgroundTint="#D6CF6B" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_regist"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/button_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/button_product"
            android:textColor="#000000"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/button_product_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/button_product_list"
            android:textColor="#000000"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/button_search_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/button_search_table"
            android:textColor="#000000"
            android:textSize="10sp" />
    </RadioGroup>

    <!-- 表示ボタン -->
    <Button
        android:id="@+id/button_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/button_show"
        android:textSize="15sp"
        app:backgroundTint="#D6CF6B" />


</RelativeLayout>