<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="4dp">

    <!-- 品名 -->

    <TextView
        android:id="@+id/text_data_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- タイトル：ブランド名 -->
        <TextView
            android:id="@+id/text_title_brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/text_title_brand"
            android:textSize="10sp" />
        <!-- データ表示用：ブランド名 -->
        <TextView
            android:id="@+id/text_data_brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="#000000"
            android:textSize="10sp" />

        <!-- タイトル：産地 -->
        <TextView
            android:id="@+id/text_title_madein"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/text_title_madein"
            android:textSize="10sp" />

        <!-- データ表示用：産地 -->
        <TextView
            android:id="@+id/text_data_maidin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textColor="#000000"
            android:textSize="10sp" />

        <!-- タイトル：個数 -->
        <TextView
            android:id="@+id/text_title_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/text_title_number"
            android:textSize="10sp" />

        <!-- データ表示用：個数 -->
        <TextView
            android:id="@+id/text_data_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textColor="#000000"
            android:textSize="10sp" />

        <!-- タイトル：単価 -->
        <TextView
            android:id="@+id/text_title_prices"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/text_title_prices"
            android:textSize="10sp" />

        <!-- データ表示用：単価 -->
        <TextView
            android:id="@+id/text_data_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textColor="#000000"
            android:textSize="10sp" />


    </LinearLayout>
</LinearLayout>